crates/caelix-core/tests/ui/event_handler_missing_registerable.stderr
error[E0277]: `SendWelcomeEmail` cannot be registered with `.event_handler::<SendWelcomeEmail>()` yet
  --> tests/ui/event_handler_missing_registerable.rs:26:14
   |
26 |             .event_handler::<SendWelcomeEmail>()
   |              ^^^^^^^^^^^^^ missing `impl RegisterableEventHandler for SendWelcomeEmail`
   |
help: the trait `RegisterableEventHandler` is not implemented for `SendWelcomeEmail`
  --> tests/ui/event_handler_missing_registerable.rs:6:1
   |
 6 | struct SendWelcomeEmail;
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: add `impl RegisterableEventHandler for SendWelcomeEmail { type Event = YourEvent; }` or use `.event_handler_for::<YourEvent, SendWelcomeEmail>()`
